# social-dynamics

./: .gitignore  README.md  pyproject.toml
notebooks/: belief-modeling.py  explore.py  ising-model-empirical.py  network-structure.py
notebooks/bsky/: crawl-repos.py  crawl-users.py
notebooks/data-gen/: polling.py
notebooks/random/: bsky.py  graphs.py  llms.py
notebooks/stat-phys/: README.md  belief-dynamics.py
notebooks/stat-phys/graphs/: fully-connected.html  ring-lattice.html  small-world-lattice.html  stochastic-block.html
raphtory-stubs/: __init__.py
refs/: collective-influence.c
scripts/: crawl-repos.py  crawl-users.py  utils.py
