[tool.poetry]
name = "social-dynamics"
version = "0.1.0"
description = ""
authors = ["Jett Hollister <jetthollister@pm.me>"]
readme = "README.md"
packages = [{ include = "graph_tool" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
h5py = "^3.11.0"
numpy = "<2.0"
scipy = "^1.14.0"
requests = "^2.32.3"
pandas = "^2.2.2"
networkx = "^3.3"
pyvis = "^0.3.2"
libipld = "^1.2.3"
polars = "^1.2.1"
huggingface-hub = "^0.24.0"
python-dotenv = "^1.0.1"
cbor2 = "^5.6.4"
raphtory = "^0.10.0"
ollama = "^0.3.0"
graph-tool = { path = "./graph_tool" }
pycairo = "^1.26.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
